--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </em>
             </h3>
             <hr />
-            <table width="50%">
+            <table width="33%">
               <!-- MAIN -->
               <tr valign="top">
                 <td>
@@ -280,12 +280,11 @@
                           <input
                             type="text"
                             id="txtList"
-                            placeholder="sign"
+                            placeholder="Pisces"
                             list="signs"
-                            value="Pisces"
                           />
                           <datalist id="signs">
-                            <option value="Pisces"></option>
+                            <option value="Pisces" selected></option>
                             <option value="Cancer"></option>
                             <option value="Leo"></option>
                             <option value="Capricorn"></option>
@@ -334,7 +333,7 @@
                       </tr>
 
                       <tr>
-                        <td><label for="school">school</label></td>
+                        <td><label for="school">school: </label></td>
                         <td>
                           <input
                             type="text"
@@ -344,7 +343,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td><label for="section">section</label></td>
+                        <td><label for="section">section: </label></td>
                         <td>
                           <input type="text" name="section" value="BSIT-S-1A" />
                         </td>
@@ -367,7 +366,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <label for="favcolor">favcolors</label>
+                          <label for="favcolor">favcolors: </label>
                         </td>
                         <td>
                           <input
@@ -392,7 +391,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <label for="favlang">favlanguages</label>
+                          <label for="favlang">favlanguages: </label>
                         </td>
                         <td name="favlang">
                           <h5><em>python</em></h5>
