--- a/index.html
+++ b/index.html
@@ -55,28 +55,30 @@
                   <br />
                   <font size="5" face="Jetbrains Mono">whoami</font>
                   <br />
-                  <p>
-                    My name is Derick James Monton Espinosa, a 1<sup>st</sup>
-                    year Bachelor of Science in Information Technology
-                    (<em>BSIT</em>) STEM-1A student from Techonological
-                    University of the Philippines &dash; Taguig.
-                    <br />
-                    <br />
-                    I am 18 years old and I was born on March 13 2004. I live in
-                    San Pedro City, Laguna.
-                    <br />
-                    I graduated high school in Pacita Complex National High
-                    School and Pacita Complex Senior High School
-                    <br />
-                    <br />
-                    I chose this course because I was really hooked into
-                    programming the moment I learned and understand some basic
-                    concepts. Even though I was aiming for a Computer Science
-                    course, I'm still pleased that I am in this course.
-                    <br />
-                    My goal is to become a Professional Software Engineer and
-                    create an enormous amount of money.
-                  </p>
+                  <article>
+                    <p>
+                      My name is Derick James Monton Espinosa, a 1<sup>st</sup>
+                      year Bachelor of Science in Information Technology
+                      (<em>BSIT</em>) STEM-1A student from Techonological
+                      University of the Philippines &dash; Taguig.
+                      <br />
+                      <br />
+                      I am 18 years old and I was born on March 13 2004. I live
+                      in San Pedro City, Laguna.
+                      <br />
+                      I graduated high school in Pacita Complex National High
+                      School and Pacita Complex Senior High School
+                      <br />
+                      <br />
+                      I chose this course because I was really hooked into
+                      programming the moment I learned and understand some basic
+                      concepts. Even though I was aiming for a Computer Science
+                      course, I'm still pleased that I am in this course.
+                      <br />
+                      My goal is to become a Professional Software Engineer and
+                      create an enormous amount of money.
+                    </p>
+                  </article>
                   <hr color="black" />
                   <br />
                   <font size="5" face="Jetbrains Mono">myhobbies</font>
